Fix Day 1 foundations: correct CSS units, declare JS vars, wrap list labels in <li>

--- a/foundation workout/day1/practice.css
+++ b/foundation workout/day1/practice.css
@@ -3,7 +3,7 @@ aside {
   padding-left: 0.5rem;
   margin-left: 0.5rem;
   float: right;
-  box-shadow: inset 5px 0 5px -5px #29627e;
+  box-shadow: inset 5px 0px 5px -5px #29627e;
   font-style: italic;
   color: #29627e;
 }
